--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -8,12 +11,463 @@
     />
     <title>Title</title>
     <link
-      rel="stylesheet"
-      href="./styles/main.scss"
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/style.scss"
+    />
+    <script
+      src="./app.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="header__wrapper">
+        <div
+          id="backdrop"
+          class="backdrop"
+        ></div>
+        <div
+          id="dropdown"
+          class="dropdown dropdown--non-visible"
+        >
+          <a
+            href="#"
+            class="icon icon--dropdown-close"
+          ></a>
+          <ul class="dropdown__nav">
+            <li class="dropdown__nav-link-group">
+              <ul class="dropdown__nav-group">
+                <li class="dropdown__nav-item">
+                  <a
+                    href="#gallery"
+                    class="dropdown__nav-link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="dropdown__nav-item">
+                  <a
+                    href="#events"
+                    class="dropdown__nav-link"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown__nav-link-group">
+              <ul class="dropdown__nav-group">
+                <li class="dropdown__nav-item">
+                  <a
+                    href="#footer"
+                    class="dropdown__nav-link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="dropdown__nav-item">
+                  <a
+                    href="#contacts"
+                    class="dropdown__nav-link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <hr class="dropdown__divider" />
+          <section class="dropdown__schedule">
+            <p class="dropdown__schedule-title">Графік роботи</p>
+            <div class="dropdown__schedule-wrapper">
+              <ul class="dropdown__schedule-list">
+                <li class="dropdown__schedule-item">
+                  <strong>12:00 — 20:00</strong>
+                  середа
+                </li>
+                <li class="dropdown__schedule-item">
+                  <strong>12:00 — 20:00</strong>
+                  четвер
+                </li>
+                <li class="dropdown__schedule-item">
+                  <strong>12:00 — 20:00</strong>
+                  п’ятниця
+                </li>
+                <li class="dropdown__schedule-item">
+                  <strong>11:00 — 19:00</strong>
+                  субота
+                </li>
+                <li class="dropdown__schedule-item">
+                  <strong>11:00 — 19:00</strong>
+                  неділя
+                </li>
+              </ul>
+              <div class="dropdown__schedule-details">
+                <p class="dropdown__schedule-weekends">
+                  <strong>Вихідні:</strong>
+                  понеділок, вівторок
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
+        <a
+          href="#dropdown"
+          class="icon icon--dropdown-open"
+        ></a>
+        <div class="header__container">
+          <div class="header__background-container">
+            <a
+              href="#"
+              class="header__logo-link"
+            >
+              <img
+                src="./images/logo-2x.png"
+                alt="NAMU Logo"
+                class="header__logo-image"
+              />
+            </a>
+            <div class="header__background"></div>
+          </div>
+          <h1 class="header__title">Художній музей</h1>
+          <div class="header__tickets-button-wrapper">
+            <a
+              href="#"
+              class="header__tickets-button"
+            >
+              <span class="header__tickets-button-text">Квитки</span>
+            </a>
+            <a
+              class="header__events-link"
+              href="#events"
+            >
+              <div class="header__events-link--line"></div>
+              <p class="header__events-link--text">Події</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <section
+        id="events"
+        class="events"
+      >
+        <h2 class="section-title">Актуальні події</h2>
+        <article class="exhibition">
+          <a
+            href="#"
+            class="exhibition__photo exhibition__photo--1"
+          ></a>
+          <div class="exhibition__content">
+            <div class="exhibition__label">
+              <p class="exhibition__text">Виставка</p>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="exhibition__name">Йду і повертаюсь</h3>
+            <p class="exhibition__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="exhibition">
+          <a
+            href="#"
+            class="exhibition__photo exhibition__photo--2"
+          ></a>
+          <div class="exhibition__content">
+            <div class="exhibition__label">
+              <p class="exhibition__text">Виставка</p>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="exhibition__name">І спогади і мрії</h3>
+            <p class="exhibition__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section
+        id="lection"
+        class="lection main__lection"
+      >
+        <div class="lection__photo"></div>
+        <article class="lection__block">
+          <div class="lection__content">
+            <div class="lection__label">
+              <p class="lection__text">Лекція</p>
+              <p class="lection__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lection__name">
+              Від класицизму до
+              <br />
+              романтизму
+            </h3>
+          </div>
+        </article>
+      </section>
+
+      <section
+        id="gallery"
+        class="gallery"
+      >
+        <h2 class="section-title">Галерея</h2>
+
+        <article class="simple-slider">
+          <div class="slider-container">
+            <div class="slider-track">
+              <div class="slide">
+                <img
+                  src="./images/gallery-1-mobile.png"
+                  alt="Image 1"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/gallery-2-mobile.png"
+                  alt="Image 2"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/gallery-3-mobile.png"
+                  alt="Image 3"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/gallery-4-mobile.png"
+                  alt="Image 4"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="slider-dots"></div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.3.2/swiper-bundle.min.js"></script>
+        </article>
+
+        <article class="gallery__desktop">
+          <div class="gallery__desktop-photo gallery__desktop-photo--1"></div>
+          <div class="gallery__desktop-photo gallery__desktop-photo--2"></div>
+          <div class="gallery__desktop-photo gallery__desktop-photo--3"></div>
+          <div class="gallery__desktop-photo gallery__desktop-photo--4"></div>
+        </article>
+      </section>
+
+      <section
+        id="subscribe"
+        class="subscribe"
+      >
+        <article class="subscribe__content">
+          <h2 class="section-title section-title--subscription">Підписка</h2>
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="subscribe__form"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscribe__form-email"
+            />
+            <button class="subscribe__button"></button>
+          </form>
+        </article>
+      </section>
+    </main>
+
+    <footer
+      id="footer"
+      class="footer"
+    >
+      <div class="footer__logo-block">
+        <a
+          href="#"
+          class="footer__logo-site"
+        >
+          <img
+            src="./images/logo-2x.png"
+            alt="Site logo"
+            class="footer__logo-site-image"
+          />
+        </a>
+        <div class="footer__logo-block-socials">
+          <a
+            href="#"
+            class="footer__logo-fb"
+          >
+            <img
+              src="./images/fb-logo-2x.png"
+              alt="Facebook logo"
+              class="footer__logo-fb-image"
+            />
+          </a>
+          <a
+            href="#"
+            class="footer__logo-insta"
+          >
+            <img
+              src="./images/insta-logo-2x.png"
+              alt="Instagram logo"
+              class="footer__logo-insta-image"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        <p class="footer__schedule-title">Графік роботи</p>
+        <ul class="footer__schedule-list">
+          <li class="footer__schedule-item">
+            <strong>12:00 — 20:00</strong>
+            середа
+          </li>
+          <li class="footer__schedule-item">
+            <strong>12:00 — 20:00</strong>
+            четвер
+          </li>
+          <li class="footer__schedule-item">
+            <strong>12:00 — 20:00</strong>
+            п’ятниця
+          </li>
+          <li class="footer__schedule-item">
+            <strong>11:00 — 19:00</strong>
+            субота
+          </li>
+          <li class="footer__schedule-item">
+            <strong>11:00 — 19:00</strong>
+            неділя
+          </li>
+          <li class="footer__schedule-item footer__schedule-item--weekends">
+            <strong>Вихідні:</strong>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </li>
+        </ul>
+      </div>
+
+      <div
+        id="contacts"
+        class="footer__contacts"
+      >
+        <p class="footer__contacts-title">Контакти:</p>
+
+        <ul class="footer__contacts-content">
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+          </li>
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+          </li>
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+          </li>
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__go-up-button_wrapper">
+        <a
+          href="#"
+          class="footer__go-up-button"
+        ></a>
+      </div>
+
+      <hr class="footer__divider" />
+
+      <ul class="footer__nav-1">
+        <li class="footer__nav-item-1">
+          <a
+            href="#gallery"
+            class="footer__nav-link-1"
+          >
+            Галерея
+          </a>
+        </li>
+        <li class="footer__nav-item-1">
+          <a
+            href="#events"
+            class="footer__nav-link-1"
+          >
+            Виставки та події
+          </a>
+        </li>
+      </ul>
+
+      <ul class="footer__nav-2">
+        <li class="footer__nav-item-2">
+          <a
+            href="#footer"
+            class="footer__nav-link-2"
+          >
+            Про Нас
+          </a>
+        </li>
+        <li class="footer__nav-item-2">
+          <a
+            href="#footer"
+            class="footer__nav-link-2"
+          >
+            Контакти
+          </a>
+        </li>
+      </ul>
+
+      <div class="footer__page-info">
+        <p class="footer__designed-info">Designed by Zhyriada Marina</p>
+        <p class="footer__copyright-info">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
