--- a/src/index.html
+++ b/src/index.html
@@ -39,33 +39,37 @@
     <!-- #region header -->
     <header class="header">
       <div class="container">
-        <div class="header__top">
+        <div class="header__container">
           <a
             href="#menu"
             class="header__icon icon icon--burger"
           ></a>
-          <a
-            href="#"
-            class="header__logo"
-          >
-            NA
-            <br />
-            MU
-          </a>
-        </div>
-        <div class="header__bottom">
-          <h1 class="header__title">
-            Художній
-            <br />
-            музей
-          </h1>
-          <div class="header__button button">
-            <div class="button__text">Квитки</div>
+          <div class="header__top">
             <a
               href="#"
-              class="button__link icon icon--link"
-            ></a>
+              class="header__logo"
+            >
+              NA
+              <br />
+              MU
+            </a>
           </div>
+          <div class="header__bottom">
+            <h1 class="header__title">Художній музей</h1>
+            <div class="header__button button">
+              <div class="button__text">Квитки</div>
+              <a
+                href="#"
+                class="button__link icon icon--link"
+              ></a>
+            </div>
+          </div>
+          <a
+            href="events"
+            class="header__event-link"
+          >
+            Події
+          </a>
         </div>
       </div>
     </header>
@@ -76,80 +80,86 @@
       id="menu"
     >
       <div class="container">
-        <div class="menu__header">
-          <a
-            href="#"
-            class="menu__icon icon icon--close"
-          ></a>
-          <div class="menu__nav nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a
-                  href="#gallery"
-                  class="nav__link"
-                >
-                  Галерея
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#subscribe"
-                  class="nav__link"
-                >
-                  Про Нас
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#events"
-                  class="nav__link"
-                >
-                  Виставки та події
-                </a>
-              </li>
+        <div class="menu__container">
+          <div class="menu__header">
+            <a
+              href="#"
+              class="menu__icon icon icon--close"
+            ></a>
+            <div class="menu__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#gallery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#subscribe"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#events"
+                    class="nav__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
 
-              <li class="nav__item">
-                <a
-                  href="#contacts"
-                  class="nav__link"
-                >
-                  Контакти
-                </a>
-              </li>
-            </ul>
+                <li class="nav__item">
+                  <a
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="menu__schedule">
-          <p class="menu__schedule--title">Графік роботи</p>
-          <p>
-            <span class="menu__schedule--bold">12:00 — 20:00</span>
+          <div class="menu__shedule-wrapper">
+            <div class="menu__schedule">
+              <p class="menu__schedule--title">Графік роботи</p>
+              <p>
+                <span class="menu__schedule--bold">12:00 — 20:00</span>
 
-            середа
-          </p>
-          <p>
-            <span class="menu__schedule--bold">12:00 — 20:00</span>
-            четвер
-          </p>
-          <p>
-            <span class="menu__schedule--bold">12:00 — 20:00</span>
-            п’ятниця
-          </p>
-          <p>
-            <span class="menu__schedule--bold">11:00 — 19:00</span>
-            субота
-          </p>
-          <p>
-            <span class="menu__schedule--bold">11:00 — 19:00</span>
-            неділя
-          </p>
-          <p class="menu__schedule--summary">
-            <span class="menu__schedule--bold">Вихідні:</span>
-            понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
-            музею
-          </p>
+                середа
+              </p>
+              <p>
+                <span class="menu__schedule--bold">12:00 — 20:00</span>
+                четвер
+              </p>
+              <p>
+                <span class="menu__schedule--bold">12:00 — 20:00</span>
+                п’ятниця
+              </p>
+              <p>
+                <span class="menu__schedule--bold">11:00 — 19:00</span>
+                субота
+              </p>
+              <p>
+                <span class="menu__schedule--bold">11:00 — 19:00</span>
+                неділя
+              </p>
+            </div>
+            <div class="menu__schedule menu__schedule--summary">
+              <span class="menu__schedule--bold">Вихідні:</span>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+              музею
+            </div>
+          </div>
         </div>
       </div>
     </aside>
+
+    <div class="overlay"><a href="#"></a></div>
     <!-- #endregion -->
     <!-- #region events -->
     <main class="main">
@@ -158,7 +168,62 @@
           class="events"
           id="events"
         >
-          <h2>Актуальні події</h2>
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__content">
+            <article class="events__event event">
+              <img
+                src="./images/picture_landscape.png"
+                alt="Landscape"
+                class="event__img"
+              />
+              <div class="event__content">
+                <div class="event__info">
+                  <span class="event__type">Виставка</span>
+                  <span class="event__date">26.08-29.11.2019</span>
+                </div>
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="events__event event">
+              <img
+                src="./images/picture_peacock.png"
+                alt="Landscape"
+                class="event__img"
+              />
+              <div class="event__content">
+                <div class="event__info">
+                  <span class="event__type">Виставка</span>
+                  <span class="event__date">26.08-29.11.2019</span>
+                </div>
+                <h3 class="event__title">І спогади і мрії</h3>
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+
+            <article class="events__event event event--lecture">
+              <div class="event__content event__content--lecture">
+                <div class="event__info event__info--lecture">
+                  <span class="event__type event__type--lecture">ЛЕКЦІЯ</span>
+                  <span class="event__date event__date--lecture">
+                    26/08/2019 - 11:00
+                  </span>
+                </div>
+                <h3 class="event__title event__title--lecture">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </article>
+          </div>
         </section>
         <!-- #endregion -->
         <!-- #region gallery -->
@@ -170,7 +235,13 @@
         </section>
         <!-- #endregion -->
         <!-- #region subscribe -->
-        <section class="subscribe"><h2>Підписка</h2></section>
+        <section class="subscribe">
+          <h2>Підписка</h2>
+          <h2>Підписка</h2>
+          <h2>Підписка</h2>
+          <h2>Підписка</h2>
+          <h2>Підписка</h2>
+        </section>
       </div>
     </main>
     <!-- #endregion -->
